--- a/application/signup/templates/partials/todo_list.html
+++ b/application/signup/templates/partials/todo_list.html
@@ -1,17 +1,15 @@
-<section class="todo__widget">
-  <h2 class="heading-medium">Your to do list</h2>
-  <ul class="todo__list">
+<h2 class="heading-medium component__head">Your to do list</h2>
+<ul class="todo__list">
 
-    {% for todo in person.todos %}
+  {% for todo in person.todos %}
 
-    <li class="todo__item grid-row">
-      <div class="column-quarter todo__cat__wrap">
-        <div class="todo__cat todo__cat--{{ todo.category }}"></div>
-      </div>
-      <div class="column-three-quarter todo__content"><a href="{{ todo.url }}">{{ todo.desc }}</a></div>
-    </li>
+  <li class="todo__item">
+    <div class="column-quarter todo__cat__wrap">
+      <div class="todo__cat todo__cat--{{ todo.category }}"></div>
+    </div>
+    <div class="column-three-quarter todo__content"><a href="{{ todo.url }}">{{ todo.desc }}</a></div>
+  </li>
 
-    {% endfor %}
+  {% endfor %}
 
-  </ul>
-</section>
+</ul>
