--- a/application/signup/templates/csprofile.html
+++ b/application/signup/templates/csprofile.html
@@ -56,7 +56,7 @@
     </div>
   </div>
 
-  {% include "partials/add_services.html" ignore missing %}
+  <section class="component--secondary component">{% include "partials/add_services.html" ignore missing %}</section>
 </main>
 
 {% endblock %}
