update link for incomplete application

--- a/application/signup/templates/partials/your_apps_list.html
+++ b/application/signup/templates/partials/your_apps_list.html
@@ -143,7 +143,7 @@
             <li class="skill" data-skill="Open standards">Open standards</li>
             <li class="skill" data-skill="Open source">Open source</li>
           </ul>
-          <a href="" class="button">continue application</a>
+          <a href="/signup/application" class="button">continue application</a>
 
         </div>
       </div>
