style the people finder component

--- a/application/signup/static/css/basicprofile.scss
+++ b/application/signup/static/css/basicprofile.scss
@@ -30,6 +30,7 @@
 @import 'components/people';
 @import 'components/app_submitted';
 @import 'components/component';
+@import 'components/people-finder';
 
 // global for all profile based pages
 #global-header-bar {
