--- a/application/signup/templates/partials/people_finder.html
+++ b/application/signup/templates/partials/people_finder.html
@@ -1,9 +1,13 @@
-<section class="container">
+<section class="component--finder component--top">
+  <h4 class="heading-medium component__head">
+    People finder
+  </h4>
+  <p>Find people across all departments and arms length bodies</p>
   <form action="" class="form">
-    <div class="form-group">
-      <label class="form-label-bold" for="person-search">People finder</label>
-      <p class="form-hint">Search by name, role or skill</p>
-      <input type="text" class="form-control" id="person-search">
+    <div class="form-group people-finder-search">
+      <label class="people-finder-label" for="person-search">Search across government</label>
+      <input type="text" class="people-finder-input" id="person-search">
+      <input class="submit" type="submit" value="Search">
     </div>
   </form>
 </section>
