update application layout

--- a/application/signup/static/css/components/_profile.scss
+++ b/application/signup/static/css/components/_profile.scss
@@ -82,6 +82,11 @@
   
 }
 
+.mini-profile__wrap {
+  margin-top: 45px;
+  padding-bottom: 18px;
+}
+
 .profile__status--reviewed::before {
   visibility: visible;
   content: "reviewed";
