--- a/application/signup/templates/partials/application_menu.html
+++ b/application/signup/templates/partials/application_menu.html
@@ -4,5 +4,5 @@
   <li class="side-menu__item checklist__status checklist__status--done"><a href="/signup/application/employment-history">Employment history</a></li>
   <li class="side-menu__item checklist__status checklist__status--incomplete"><a href="/signup/application/competencies">Competencies</a></li>
   <li class="side-menu__item checklist__status checklist__status--inprogress"><a href="/signup/application">Equality & diversity</a></li>
-  <li class="side-menu__item"><button class="button submit-app-btn">submit application</button></li>
+  <li class="side-menu__item side-menu__item--btn"><button class="button submit-app-btn">submit application</button></li>
 </ul>
