--- a/application/signup/templates/partials/mini_jobs_profile.html
+++ b/application/signup/templates/partials/mini_jobs_profile.html
@@ -1,6 +1,8 @@
-<h5 class="heading-small">Colm Britton</h5>
-<ul class="job__info">
-  <li>Role: Front-end designer</li>
-  <li>Ref: 14543678</li>
-  <li>Status: incomplete</li>
-</ul>
+<section class="mini-profile__wrap">
+  <h5 class="heading-small"><a href="/signup/basicprofile_jobs/apps">Colm Britton</a></h5>
+  <ul class="job__info">
+    <li>Role: Front-end designer</li>
+    <li>Ref: 14543678</li>
+    <li>Status: incomplete</li>
+  </ul>
+</section>
