show profile pic if there is one

--- a/application/signup/static/css/components/_basicprofile.scss
+++ b/application/signup/static/css/components/_basicprofile.scss
@@ -10,6 +10,8 @@
   position: absolute;
   top: -1*$gutter;
   left: $gutter-half;
+  width: 100px; height: 100px;
+  overflow: hidden;
 }
 .basicprofile__content__items {
   padding-left: 100px + $gutter;
