make skip button work

--- a/application/signup/templates/basicprofile.html
+++ b/application/signup/templates/basicprofile.html
@@ -5,7 +5,7 @@
 
 <aside class="welcome__wrap">
   <section class="welcome">
-    <h2 class="heading-large welcome__heading">Welcome to gov.uk</h2>
+    <h2 class="heading-large welcome__heading">Welcome to GOV.UK</h2>
     <div class="grid-row">
       <div class="column-half">
         <p class="lede">Your profile is not yet complete</p>
