--- a/application/signup/templates/partials/basicprofile_jobs_profile.html
+++ b/application/signup/templates/partials/basicprofile_jobs_profile.html
@@ -1,4 +1,4 @@
-<section>
+<section class="mini-profile__wrap">
   <h5 class="heading-small">Colm Britton</h5>
   <ul>
     <li><span>2 saved</span></li>
