--- a/application/signup/templates/partials/perf_profile.html
+++ b/application/signup/templates/partials/perf_profile.html
@@ -1,11 +1,13 @@
-<h5 class="heading-small">Colm Britton</h5>
-<ul class="job__info">
-  <li>Front-end designer</li>
-  <li>Grade A</li>
-</ul>
-<dl>
-  <dt>Last review:</dt>
-  <dd>20th Mar 2015</dd>
-  <dt>Next review:</dt>
-  <dd>17th Jul 2015</dd>
-</dl>
+<section class="mini-profile__wrap">
+  <h5 class="heading-small">Colm Britton</h5>
+  <ul class="job__info">
+    <li>Front-end designer</li>
+    <li>Grade A</li>
+  </ul>
+  <dl>
+    <dt>Last review:</dt>
+    <dd>20th Mar 2015</dd>
+    <dt>Next review:</dt>
+    <dd>17th Jul 2015</dd>
+  </dl>
+</section>
