allow user to change details

--- a/application/signup/templates/application.html
+++ b/application/signup/templates/application.html
@@ -35,7 +35,7 @@
           <li class="grid-row data-item__wrap">
             <div class="data-item">
               <div class="column-quarter data-item__type">Full name</div>
-              <div class="column-half data-item__entry" data-key="name">Colm Britton</div>
+              <div class="column-half data-item__entry" data-key="name">{{ profile.data.name }}</div>
               <div class="column-quarter"><button class="data-item__edit">edit</button></div>
             </div>
           </li>
@@ -43,7 +43,7 @@
           <li class="grid-row data-item__wrap">
             <div class="data-item">
               <div class="column-quarter data-item__type">Personal email</div>
-              <div class="column-half data-item__entry" data-key="email">colmjude@gmail.com</div>
+              <div class="column-half data-item__entry" data-key="email">{{ profile.data.email }}</div>
               <div class="column-quarter"><button class="data-item__edit">edit</button></div>
             </div>
           </li>
@@ -64,7 +64,7 @@
           <li class="grid-row data-item__wrap">
             <div class="data-item">
               <div class="column-quarter data-item__type">Contact number</div>
-              <div class="column-half data-item__entry" data-key="tel">07659503485</div>
+              <div class="column-half data-item__entry" data-key="tel">{{ profile.data.tel }}</div>
               <div class="column-quarter"><button class="data-item__edit">edit</button></div>
             </div>
           </li>
