use really profile pics

--- a/application/signup/templates/partials/profile/team_component.html
+++ b/application/signup/templates/partials/profile/team_component.html
@@ -1,16 +1,16 @@
 <h4 class="heading-medium component__head">Team</h4>
 <h5 class="heading-small">Line manager</h5>
 <ul>
-  <li><img src="http://placehold.it/50x50" class=""></li>
+  <li><a href="/"><img src="/static/images/profiles/candice.jpg" alt="Candice Jones" title="Candice Jones" class=""></a></li>
 </ul>
 <h5 class="heading-small">Team members</h5>
 <ul class="people-pic__list">
-  <li><img src="http://placehold.it/50x50" class=""></li>
-  <li><img src="http://placehold.it/50x50" class=""></li>
-  <li><img src="http://placehold.it/50x50" class=""></li>
-  <li><img src="http://placehold.it/50x50" class=""></li>
-  <li><img src="http://placehold.it/50x50" class=""></li>
-  <li><img src="http://placehold.it/50x50" class=""></li>
-  <li><img src="http://placehold.it/50x50" class=""></li>
-  <li><img src="http://placehold.it/50x50" class=""></li>
+  <li><a href="/"><img src="/static/images/profiles/brook.jpg" alt="Brook Taylor" title="Brook Taylor" class=""></a></li>
+  <li><a href="/"><img src="/static/images/profiles/anna.jpg" alt="Anna Hendry" title="Anna Hendry" class=""></a></li>
+  <li><a href="/"><img src="/static/images/profiles/nick.jpg" alt="Ross Gellar" title="Ross Gellar" class=""></a></li>
+  <li><a href="/"><img src="/static/images/profiles/david.jpg" alt="David Davies" title="David Davies" class=""></a></li>
+  <li><a href="/"><img src="/static/images/profiles/juan.jpg" alt="Juan Torres" title="Juan Torres" class=""></a></li>
+  <li><a href="/"><img src="/static/images/profiles/jen.jpg" alt="Jen Cheng" title="Jen Cheng" class=""></a></li>
+  <li><a href="/"><img src="/static/images/profiles/jsa.jpg" alt="Nigel Barrow" title="Nigel Barrow" class=""></a></li>
+  <li><a href="/"><img src="/static/images/profiles/philip.jpg" alt="Philip Hayman" title="Philip Hayman" class=""></a></li>
 </ul>
