profile reset absolute path

--- a/application/profile/templates/magic.html
+++ b/application/profile/templates/magic.html
@@ -14,6 +14,6 @@
 {% block content %}
 <main id="content" role="main">
 <h1>Hello {{ session.email }}</h1>
-<p><a href="./magic/reset">reset my profile</a></p>
+<p><a href="/profile/magic/reset">reset my profile</a></p>
 </main>
 {% endblock %}
