--- a/application/jobs/templates/includes/signup.html
+++ b/application/jobs/templates/includes/signup.html
@@ -1,7 +1,12 @@
 <aside class="signup__wrap">
   <div class="signup">
     <form class="signup__form" action="">
-      <h2 class="heading-medium">Create gov profile</h2>
+      <h2 class="heading-medium">Create GOV.UK profile</h2>
+      <p>If you create a profile you can:</p>
+
+      <ul class="list-bullet"><li>apply for civil service jobs</li>
+      <li>set up email job alerts</li>
+      <li>save applications and vacancies</li></ul>
       <div class="form-group">
         <label class="form-label" for="email">Email</label>
         <input type="text" class="form-control signup__input" id="email">
