--- a/application/signup/static/css/components/_people-finder.scss
+++ b/application/signup/static/css/components/_people-finder.scss
@@ -10,6 +10,12 @@
     text-indent: -5000px;
   }
 }
+.people-finder {
+  p {
+    margin-bottom: 0.25em;
+  }
+}
+
 .people-finder-input {
   width: calc(100% - 37px);
   padding: 7px;
