--- a/application/signup/templates/basicprofile_checklist.html
+++ b/application/signup/templates/basicprofile_checklist.html
@@ -83,15 +83,9 @@
         </div>
       </details>
       <details class="cl_item">
-        <summary class="cl_item__head cl_item__status">Create Civil Servant profile</summary>
-        <div class="cl_item__content">
-          <a href="/signup/csprofile" class="button">Create profile</a>
-        </div>
-      </details>
-      <details class="cl_item">
         <summary class="cl_item__head cl_item__status">First day details</summary>
         <div class="cl_item__content">
-          some content
+          <a href="/signup/csprofile" class="button">Go to profile</a>
         </div>
       </details>
     </div>
