--- a/application/signup/templates/partials/app_success_banner.html
+++ b/application/signup/templates/partials/app_success_banner.html
@@ -1,7 +1,7 @@
 <div class="app-submitted__wrap">
   <div class="app-submitted">
-    <h3 class="app-submitted__heading heading-large">Success</h3>
-    <p>Your application has been submitted successfully. We will contact you shortly should your application be successful.</p>
+    <h3 class="app-submitted__heading heading-large">Application submitted</h3>
+    <p>You’ve successfully submitted your application.</p>
     <p><a href="/signup/basicprofile_jobs/apps?hasOffer=yes">View your applications</a></p>
   </div>
 </div>
