--- a/application/signup/templates/partials/application_settings.html
+++ b/application/signup/templates/partials/application_settings.html
@@ -2,7 +2,7 @@
 <div class="settings__wrap">
   <form class="settings__form">
     <fieldset>
-      <legend>Choose how you'd like to receive notifications regarding your application</legend>
+      <legend>How would you like to receive notifications?</legend>
       <input type="checkbox" name="box1" value="email" id="email_check"> <label for="email_check">email</label> <br>
       <input type="checkbox" name="box1" value="sms" id="sms_check"> <label for="sms_check">SMS</label>
     </fieldset>
