--- a/application/signup/templates/partials/people_finder.html
+++ b/application/signup/templates/partials/people_finder.html
@@ -1,8 +1,8 @@
-<section class="component--finder component--top">
+<section class="component--finder component--top people-finder">
   <h4 class="heading-medium component__head">
-    People finder
+    Civil Service people finder
   </h4>
-  <p>Find people across all departments and arms length bodies</p>
+  <p>Search by name, department or profession</p>
   <form action="" class="form">
     <div class="form-group people-finder-search">
       <label class="people-finder-label" for="person-search">Search across government</label>
