--- a/application/signup/templates/partials/skills_component.html
+++ b/application/signup/templates/partials/skills_component.html
@@ -37,6 +37,6 @@
 </div>
 
 <div class="skills__extra">
-  <label class="form-label" for="other-skills">Add skill/s</label>
+  <label class="form-label" for="other-skills">Add skill(s)</label>
   <input class="form-control" type="text" id="other-skills"/>
 </div>
