--- a/application/signup/templates/partials/your_apps_list.html
+++ b/application/signup/templates/partials/your_apps_list.html
@@ -1,7 +1,7 @@
 <section class="review__section">
 
   <details class="filter">
-    <summary>Filter your applications</summary>
+    <summary>Filter by status</summary>
     <button data-status="saved" class="filter-btn button--saved">Saved (2)</button>
     <button data-status="incomplete" class="filter-btn button--incomplete">Incomplete (1)</button>
     <button data-status="received" class="filter-btn button--received">Received (1)</button>
