--- a/application/signup/templates/basicprofile.html
+++ b/application/signup/templates/basicprofile.html
@@ -8,7 +8,9 @@
     <h2 class="heading-large welcome__heading">Welcome to GOV.UK</h2>
     <div class="grid-row">
       <div class="column-half">
-        <p class="lede">Your profile is not yet complete</p>
+        <p class="lede">Your profile is incomplete.</p>
+        <p>A completed profile helps us match you to jobs in the Civil Service.</p>
+        <p><a href="/signup/basicprofile_jobs">Back to job search</a></p>
       </div>
       <div class="column-half">
         <div class="grid-row">
