add link to application to the home page

--- a/application/templates/public/home.html
+++ b/application/templates/public/home.html
@@ -41,7 +41,8 @@
     <li>
       <a href="/jobs/search_by_skill">Job search by skill</a>
     </li>
-    <li>Application</li>
+    <li>
+      <a href="/signup/application">Application</a></li>
     <li>
       <a href="/jobs/your_apps">Application status</a></li>
     <li>
