ensure service names are capitalised

--- a/application/signup/static/css/components/_services.scss
+++ b/application/signup/static/css/components/_services.scss
@@ -3,6 +3,10 @@
   padding: $gutter-half;
 }
 
+.service__name::first-letter {
+  text-transform: uppercase;
+}
+
 .service__item__meta {
   margin-bottom: 0;
 }
