hyphenate to do list

--- a/application/signup/templates/partials/todo_list.html
+++ b/application/signup/templates/partials/todo_list.html
@@ -1,4 +1,4 @@
-<h2 class="heading-medium component__head">Your to do list</h2>
+<h2 class="heading-medium component__head">Your to&#8208;do list</h2>
 <ul class="todo__list">
 
   {% for todo in person.todos %}
