update js to remove input boxes if value changes

--- a/application/signup/templates/application.html
+++ b/application/signup/templates/application.html
@@ -43,7 +43,7 @@
           <li class="grid-row data-item__wrap">
             <div class="data-item">
               <div class="column-quarter data-item__type">Personal email</div>
-              <div class="column-half data-item__entry data-item__entry--email" >{{ profile.data.email.personal }}</div>
+              <div class="column-half data-item__entry data-item__entry--email" data-key="email">{{ profile.data.email.personal }}</div>
               <div class="column-quarter"><button class="data-item__edit">edit</button></div>
             </div>
           </li>
