--- a/application/jobs/templates/contract.html
+++ b/application/jobs/templates/contract.html
@@ -40,7 +40,7 @@
       <dt>Start date</dt>
       <dd><datetime>12th June 2015</datetime></dd>
       <dt>Employee number</dt>
-      <dd>???</dd>
+      <dd>034765</dd>
     </dl>
     
   </section>
@@ -89,9 +89,16 @@
     <div class="switch">
       <input id="sign" name="sign" type="checkbox" class="switch__checkbox" value="y" />
       <label for="sign" class="switch__label">Sign</label>
-      <span class="switch__checkbox__label">Sign contract</span>
+      <span class="switch__checkbox__label">
+        <span class="switch__label--off">Sign contract</span>
+        <span class="switch__label--on">Signed</span>
+      </span>
     </div>
 
+  </section>
+
+  <section class="section">
+    <a href="/signup/basicprofile/checklist" class="secondary--btn">back to checklist</a>
   </section>
 
 </main><!-- / #page-container -->
