add link to pass data page

--- a/application/prejoining/templates/pass_data.html
+++ b/application/prejoining/templates/pass_data.html
@@ -7,7 +7,7 @@
   <li>your start date</li>
 </ul>
 <p>
-  <a class="button" href="">Grant access</a>
+  <a class="button" href="/signup/basicprofile/checklist">Grant access</a>
   <a class="button button-secondary" href="">Deny</a>
 </p>
 {% endblock %}
