add progress to obj 1

--- a/application/signup/templates/csprofile_perf_obj.html
+++ b/application/signup/templates/csprofile_perf_obj.html
@@ -31,6 +31,9 @@
           </div>
           <div class="objective__progress">
             <h3 class="heading-small">Progress:</h3>
+            <ul class="list-bullet">
+              <li>prototype 1 <a href="">Create a profile</a> completed, tested and iterated once</li>
+            </ul>
           </div>
         </li>
         <li class="objective">
