add digital profession page

--- a/application/templates/public/home.html
+++ b/application/templates/public/home.html
@@ -77,7 +77,8 @@
 
   <h3 class="heading-medium">Professions</h3>
   <ul>
-    <li><a href="/professions/hub">a profession's hub page</a></li>
+    <li><a href="/professions/hub">a profession's hub page (finance)</a></li>
+    <li><a href="/professions/tech_hub">digital profession hub page</a></li>
   </ul>
 
   <h3 class="heading-medium">Day to day</h3>
