--- a/application/signup/templates/partials/profile/communities.html
+++ b/application/signup/templates/partials/profile/communities.html
@@ -1,6 +1,6 @@
 <h4 class="heading-medium component__head">Communities</h4>
 <ul class="communities-list">
-  <li><span class="community-type">P:</span>Digital</li>
+  <li><span class="community-type">P:</span><a href="/professions/tech_hub">Digital</a></li>
   <li><span class="community-type">F:</span>Technology</li>
   <li><span class="community-type">O:</span>Cabinet Office</li>
 </ul>
