--- a/application/signup/templates/csprofile_learning.html
+++ b/application/signup/templates/csprofile_learning.html
@@ -6,16 +6,18 @@
 <main id="content" role="main">
   <h1 class="heading-large">Your learning</h1>
   <section class="grid-row section--bottom">
-    <div class="column-third">
-      <h2 class="heading-small">Quick course search</h2>
-      <form action="/" method="post" class="form">
-        <!-- Full name -->
-        <div class="form-group">
-          <label class="form-label form-hint" for="full-name">Search by name, skill or keyword</label>
-          <input type="text" class="form-control-3-4" id="full-name">
-        </div>
-        <button class="button">Search</button>
-      </form>
+    <div class="column-third course__search">
+      <section class="">
+        <h2 class="heading-small">Quick course search</h2>
+        <p class="form-hint">Search by name, skill or keyword</p>
+        <form action="" class="form">
+          <div class="form-group people-finder-search">
+            <label class="people-finder-label" for="person-search">find courses</label>
+            <input type="text" class="people-finder-input" id="person-search">
+            <input class="submit" type="submit" value="Search">
+          </div>
+        </form>
+      </section>
     </div>
     <div class="column-third">
       <h2 class="heading-small">Mentors</h2>
