--- a/application/signup/templates/partials/expenses_widget.html
+++ b/application/signup/templates/partials/expenses_widget.html
@@ -1,6 +1,7 @@
-<div class="widget-wrap">
-  <h3 class="heading-medium widget__head">Expenses</h3>
-  <div class="widget__body">
+<div class="">
+  <h3 class="heading-medium component__head">Expenses</h3>
+  <a href="/being_a_civil_servant/addreceipt" class="foot-link">view details</a>
+  <div class="">
     <div class="grid-row">
       <div class="column-two-thirds">Pending items</div>
       <div class="column-third info__item">2</div>
@@ -9,14 +10,14 @@
       <div class="column-two-thirds">Approved items</div>
       <div class="column-third info__item">2</div>
     </div>
-    <div class="grid-row">
+    <div class="expenses__totals"><div class="grid-row">
       <div class="column-two-thirds">Total owed</div>
       <div class="column-third info__item">£397</div>
     </div>
     <div class="grid-row">
       <div class="column-two-thirds">Payment due</div>
       <div class="column-third info__item">2nd Jun</div>
-    </div>
-    <a href="/being_a_civil_servant/addreceipt" class="foot-link">view details</a>
+    </div></div>
+    
   </div>
 </div>
