--- a/application/signup/templates/partials/profile/equip_component.html
+++ b/application/signup/templates/partials/profile/equip_component.html
@@ -1,10 +1,10 @@
-<h3 class="heading-medium">Equip</h3>
+<h3 class="heading-medium component__head">Equipment</h3>
 <table>
   <thead>
     <tr>
       <th></th>
       <th></th>
-      <th class="numeric">Update</th>
+      <th class="numeric">Update due in</th>
     </tr>
   </thead>
   <tbody>
@@ -22,9 +22,9 @@
 </table>
 <div class="grid-row">
   <div class="column-half">
-    <button class="button">Repair</button>
+    <button class="secondary--btn">Repair</button>
   </div>
   <div class="column-half align-right">
-    <button class="button">Renew</button>
+    <button class="secondary--btn">Renew</button>
   </div>
 </div>
